--- a/performance.html
+++ b/performance.html
@@ -18,42 +18,64 @@
   <link rel='shortcut icon' type='image/x-icon' href='assets/img/favicon.ico' />
 </head>
 <style>
-  .card {
+  .metric-card {
     border: none;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.03);
-    margin-bottom: 20px;
+    border-radius: 15px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
+    transition: all 0.3s ease;
+    overflow: hidden;
+    margin-bottom: 1.5rem;
   }
 
-  .card-header {
+  .metric-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
+  }
+
+  .metric-card .card-header {
     background-color: white;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+    border-bottom: none;
+    padding: 1rem 1.5rem;
     font-weight: 600;
+    color: var(--primary);
   }
 
-  .primary-bg {
-    background-color: var(--primary-color);
-    color: white;
+  .metric-card .card-body {
+    padding: 1.5rem;
   }
 
-  .stat-card {
-    border-left: 4px solid var(--primary-color);
-  }
-
-  .stat-card h2 {
+  .metric-value {
+    font-size: 2.2rem;
     font-weight: 700;
-    color: var(--primary-color);
+    color: #2c3e50;
+    margin-bottom: 0.5rem;
   }
 
-  .progress {
-    height: 8px;
-    border-radius: 4px;
+  .metric-label {
+    color: #7f8c8d;
+    font-size: 0.9rem;
+    text-transform: uppercase;
+    letter-spacing: 1px;
   }
 
-  .progress-bar {
-    background-color: var(--primary-color);
+  .metric-change {
+    display: inline-block;
+    padding: 0.25rem 0.5rem;
+    border-radius: 20px;
+    font-size: 0.75rem;
+    font-weight: 600;
+    margin-top: 0.5rem;
   }
 
+  .metric-change.up {
+    background-color: rgba(40, 167, 69, 0.1);
+    color: #28a745;
+  }
+
+  .metric-change.down {
+    background-color: rgba(220, 53, 69, 0.1);
+    color: #dc3545;
+  }
 
   .badge-primary {
     background-color: var(--primary-color);
@@ -161,8 +183,6 @@
                   <a href="#" class="has-dropdown">Payment Info</a>
                   <ul class="dropdown-menu">
                     <li><a href="./billing.html">Billing</a></li>
-                    <li><a href="./payments.html">Payments</a></li>
-                    <li><a href="#">Invoices</a></li>
                   </ul>
                 </li>
                 <li><a class="nav-link" href="./settings.html">Settings</a></li>
@@ -175,35 +195,59 @@
       </div>
       <!-- Main Content -->
       <div class="main-content">
-        <!-- Stats Cards -->
+        <!-- Metrics Row -->
         <div class="row mb-4">
-          <div class="col-lg-4 col-md-4 col-12">
-            <div class="card stat-card">
+          <!-- Total Transactions -->
+          <div class="col-md-6 col-lg-4">
+            <div class="metric-card">
+              <div class="card-header d-flex justify-content-between align-items-center">
+                <span>Transactions</span>
+                <i class="fas fa-exchange-alt text-primary"></i>
+              </div>
               <div class="card-body">
-                <h6 class="card-title text-muted">Total Transactions</h6>
-                <h2 class="mb-1">247</h2>
-                <p class="text-success"><small><i class="fas fa-arrow-up"></i> 12.5% from last month</small></p>
+                <div class="metric-value">12,548</div>
+                <div class="metric-label">Total Transactions</div>
+                <span class="metric-change up">
+                  <i class="fas fa-arrow-up mr-1"></i> 12.5%
+                </span>
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-4 col-12">
-            <div class="card stat-card">
+
+          <!-- Total Sales -->
+          <div class="col-md-6 col-lg-4">
+            <div class="metric-card">
+              <div class="card-header d-flex justify-content-between align-items-center">
+                <span>Sales</span>
+                <i class="fas fa-shopping-cart text-primary"></i>
+              </div>
               <div class="card-body">
-                <h6 class="card-title text-muted">Total Sales</h6>
-                <h2 class="mb-1">89</h2>
-                <p class="text-success"><small><i class="fas fa-arrow-up"></i> 5.3% from last month</small></p>
+                <div class="metric-value">$84,725</div>
+                <div class="metric-label">Total Sales</div>
+                <span class="metric-change up">
+                  <i class="fas fa-arrow-up mr-1"></i> 8.3%
+                </span>
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-4 col-12">
-            <div class="card stat-card">
+
+          <!-- Total Commission -->
+          <div class="col-md-6 col-lg-4">
+            <div class="metric-card">
+              <div class="card-header d-flex justify-content-between align-items-center">
+                <span>Commission</span>
+                <i class="fas fa-hand-holding-usd text-primary"></i>
+              </div>
               <div class="card-body">
-                <h6 class="card-title text-muted">Commission Earned</h6>
-                <h2 class="mb-1">3.42%</h2>
-                <p class="text-danger"><small><i class="fas fa-arrow-down"></i> 1.2% from last month</small></p>
+                <div class="metric-value">$12,345</div>
+                <div class="metric-label">Total Commission</div>
+                <span class="metric-change down">
+                  <i class="fas fa-arrow-down mr-1"></i> 2.1%
+                </span>
               </div>
             </div>
           </div>
+
         </div>
 
         <!-- Performance Chart -->
