--- a/webs.html
+++ b/webs.html
@@ -26,6 +26,11 @@
     --text-dark: #343a40;
   }
 
+  body {
+    background-color: #f8fafc;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+
   .profile-header {
     /* background: linear-gradient(135deg, var(--primary-color) 0%, var(--primary-light) 100%); */
     background: var(--primary-color);
@@ -204,9 +209,7 @@
     margin-bottom: 0;
   }
 
-
   select option {
-    padding: 12px 16px;
     background-color: white;
     color: var(--primary-color);
     font-weight: 500;
@@ -231,6 +234,10 @@
     color: var(--primary-color);
     font-weight: 500;
     transition: all 0.3s ease;
+  }
+
+  select[multiple] {
+    height: 100px !important;
   }
 
   .form-control:focus {
@@ -315,8 +322,8 @@
             <li class="dropdown active">
               <a href="#" class="menu-toggle nav-link has-dropdown"><i data-feather="copy"></i><span>Settings</span></a>
               <ul class="dropdown-menu">
-                <li class="active"><a class="nav-link" href="./my-profile.html">Profile</a></li>
-                <li><a class="nav-link" href="./webs.html">Websites</a></li>
+                <li><a class="nav-link" href="./my-profile.html">Profile</a></li>
+                <li class="active"><a class="nav-link" href="./webs.html">Websites</a></li>
                 <li class="dropdown">
                   <a href="#" class="has-dropdown">Payment Info</a>
                   <ul class="dropdown-menu">
@@ -390,12 +397,12 @@
             <!-- Tabs Navigation -->
             <ul class="nav nav-pills mb-2" id="profileTabs" role="tablist">
               <li class="nav-item">
-                <a class="nav-link active" id="activity-tab" href="my-profile.html">
+                <a class="nav-link" id="activity-tab" href="my-profile.html">
                   <i class="fas fa-info-circle mr-2"></i>Introduction
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="projects-tab" href="webs.html">
+                <a class="nav-link active" id="projects-tab" href="webs.html">
                   <i class="fas fa-globe mr-2"></i>Websites
                 </a>
               </li>
@@ -415,169 +422,173 @@
 
         <div class="row">
           <div class="col-12">
-            <div class="card">
-            <div class="card-body">
-              <form action="#" method="POST" enctype="multipart/form-data">
-            <!-- Name & Username -->
-            <div class="row mb-4">
-              <div class="col-md-6">
-                <label class="form-label required">Full Name</label>
-                <input type="text" name="name" class="form-control" placeholder="Your full name" />
+            <div class="card shadow-sm">
+              <div class="card-header d-flex justify-content-between align-items-center bg-white">
+                <h5 class="mb-0">Websites</h5>
+                <button type="button" class="btn btn-sm btn-primary" onclick="openWebsiteModal()" data-toggle="modal"
+                  data-target="#website-modal" title="Click to add a website">
+                  <i class="bi bi-plus-circle mr-1"></i> Add Website
+                </button>
               </div>
-              <div class="col-md-6">
-                <label class="form-label required">Username</label>
-                <input type="text" name="user_name" class="form-control" placeholder="User name" />
-              </div>
-            </div>
 
-            <!-- Bio -->
-            <div class="mb-4">
-              <label class="form-label required">Bio</label>
-              <small class="text-muted d-block mb-1">Tell advertisers about yourself and what you're looking
-                for.</small>
-              <textarea name="bio" rows="4" class="form-control" placeholder="Write your bio here..."></textarea>
-            </div>
-
-            <!-- Region & Language -->
-            <div class="row mb-4">
-              <div class="col-md-6">
-                <label class="form-label required">Target Region</label>
-                <select name="country" class="form-control">
-                  <option value="">Select a Country...</option>
-                  <option value="United States">United States</option>
-                  <option value="United Kingdom">United Kingdom</option>
-                  <option value="Canada">Canada</option>
-                  <!-- Add more countries as needed -->
-                </select>
-              </div>
-              <div class="col-md-6">
-                <label class="form-label required">Language</label>
-                <select name="language" class="form-control">
-                  <option value="">Select a Language...</option>
-                  <option value="English">English</option>
-                  <option value="Spanish">Spanish</option>
-                  <option value="French">French</option>
-                  <!-- Add more languages as needed -->
-                </select>
-              </div>
-            </div>
-
-            <!-- Gender & DOB -->
-            <div class="row mb-4">
-              <div class="col-md-6">
-                <label class="form-label required">Gender</label>
-                <select name="gender" class="form-control">
-                  <option value="">Select Gender</option>
-                  <option value="male">Male</option>
-                  <option value="female">Female</option>
-                  <option value="nonbinary">Nonbinary</option>
-                </select>
-              </div>
-              <div class="col-md-6">
-                <label class="form-label required">Date of Birth</label>
-                <input type="date" name="dob" class="form-control" />
-              </div>
-            </div>
-
-            <!-- Address -->
-            <div class="mb-4">
-              <label class="form-label required">Address</label>
-              <input type="text" name="location_address_1" class="form-control" placeholder="Enter your address" />
-            </div>
-
-            <!-- Location Fields -->
-            <div class="row mb-4">
-              <div class="col-md-4">
-                <label class="form-label required">Country</label>
-                <select name="location_country" class="form-control">
-                  <option value="">Select Country</option>
-                  <option value="1">United States</option>
-                  <option value="2">United Kingdom</option>
-                  <!-- Add more countries as needed -->
-                </select>
-              </div>
-              <div class="col-md-4">
-                <label class="form-label required">State</label>
-                <select name="location_state" class="form-control">
-                  <option value="">Select State</option>
-                  <option value="1">California</option>
-                  <option value="2">New York</option>
-                  <!-- Add more states as needed -->
-                </select>
-              </div>
-              <div class="col-md-4">
-                <label class="form-label required">City</label>
-                <select name="location_city" class="form-control">
-                  <option value="">Select City</option>
-                  <option value="1">Los Angeles</option>
-                  <option value="2">New York City</option>
-                  <!-- Add more cities as needed -->
-                </select>
-              </div>
-            </div>
-
-            <!-- Media Kit -->
-            <div class="mb-4">
-              <label class="form-label">Media Kit</label>
-              <input type="file" name="mediakit_image" class="form-control border-0 mb-3" />
-              <div class="table-responsive">
-                <table class="table table-bordered text-center">
+              <div class="table-responsive p-4">
+                <table class="table">
                   <thead>
                     <tr>
                       <th>Name</th>
-                      <th>Size</th>
+                      <th>Type</th>
+                      <th>Category</th>
+                      <th>Last Updated</th>
+                      <th>Status</th>
                       <th>Action</th>
                     </tr>
                   </thead>
-                  <tbody>
-                    <tr>
-                      <td class="text-start"><a href="#" target="_blank">Sample Media Kit.pdf</a></td>
-                      <td>245 Kb</td>
+                  <tbody id="websiteContent">
+                    <tr class="border-bottom">
                       <td>
-                        <a href="#" class="text-danger"><i class="fas fa-trash"></i></a>
+                        <a href="#" target="_blank" class="nav-link">Example Website</a>
                       </td>
-                    </tr>
-                    <tr>
-                      <td class="text-start"><a href="#" target="_blank">Profile Overview.docx</a></td>
-                      <td>178 Kb</td>
+                      <td title="Partner Type">
+                        Affiliate
+                      </td>
+                      <td title="Categories">
+                        Technology
+                      </td>
                       <td>
-                        <a href="#" class="text-danger"><i class="fas fa-trash"></i></a>
+                        2025-07-01
+                      </td>
+                      <td>
+                        <span class="badge badge-success">Active</span>
+                      </td>
+                      <td>
+                        <a href="javascript:void(0)" class="badge badge-info" onclick="openWebsiteModal(1, '1')"
+                          data-toggle="modal" data-target="#website-modal">
+                          Edit
+                        </a>
+                        <a href="javascript:void(0)" class="badge badge-success"
+                          onclick="openVerifyModal('1', 'https://example.com')" data-toggle="modal"
+                          data-target="#verify-modal">
+                          Verify
+                        </a>
                       </td>
                     </tr>
                   </tbody>
+
                 </table>
               </div>
             </div>
+          </div>
 
-            <!-- Avatar -->
-            <div class="mb-4">
-              <label class="form-label">Profile Image</label>
-              <div class="d-flex align-items-center">
-                <div class="me-3">
-                  <img src="https://placehold.co/70" class="rounded-circle" width="70" height="70"
-                    alt="Profile" />
+          <!-- Modals -->
+          <div class="modal fade" id="website-modal" tabindex="-1" aria-labelledby="websiteHeading" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-xl">
+              <div class="modal-content">
+                <form action="javascript:void(0)" id="edit-website">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="websiteHeading">Edit Website</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span>&times;</span>
+                    </button>
+                  </div>
+
+                  <div class="modal-body">
+                    <input type="hidden" id="website_id" name="website_id">
+                    <div class="form-row">
+                      <div class="form-group col-md-6">
+                        <label for="website_name">Name <span class="text-danger">*</span></label>
+                        <input type="text" class="form-control" id="website_name" placeholder="Enter Name">
+                      </div>
+                      <div class="form-group col-md-6">
+                        <label for="website_url">URL <span class="text-danger">*</span></label>
+                        <input type="url" class="form-control" id="website_url" placeholder="Enter URL">
+                      </div>
+                    </div>
+
+                    <div class="form-row">
+                      <div class="form-group col-md-4">
+                        <label for="monthly_traffic">Monthly Traffic <span class="text-danger">*</span></label>
+                        <input type="text" class="form-control" id="monthly_traffic"
+                          placeholder="Enter Monthly Traffic">
+                      </div>
+                      <div class="form-group col-md-4">
+                        <label for="monthly_page_views">Monthly Page Views <span class="text-danger">*</span></label>
+                        <input type="text" class="form-control" id="monthly_page_views"
+                          placeholder="Enter Monthly Page Views">
+                      </div>
+                      <div class="form-group col-md-4">
+                        <label for="website_country">Country <span class="text-danger">*</span></label>
+                        <select id="website_country" class="form-control">
+                          <option value="">Select Country</option>
+                        </select>
+                      </div>
+                    </div>
+
+                    <div class="form-group">
+                      <label for="website_type">Website Type <span class="text-danger">*</span></label>
+                      <select id="website_type" class="form-control" multiple>
+                        <option value="1">Affiliate</option>
+                        <option value="2">E-commerce</option>
+                      </select>
+                    </div>
+
+                    <div class="form-group">
+                      <label for="categories">Category (Max. 4) <span class="text-danger">*</span></label>
+                      <select id="categories" class="form-control" multiple>
+                        <option value="1">Technology</option>
+                        <option value="2">Education</option>
+                      </select>
+                    </div>
+
+                    <div class="form-group">
+                      <label for="website_intro">Website's Introduction <span class="text-danger">*</span></label>
+                      <textarea class="form-control" id="website_intro" rows="4"
+                        placeholder="Enter website introduction"></textarea>
+                    </div>
+                  </div>
+
+                  <div class="modal-footer justify-content-between">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <button type="submit" class="btn btn-primary">
+                      Save Changes
+                    </button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+
+          <div class="modal fade" id="verify-modal" tabindex="-1" aria-labelledby="verifyHeading" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-lg">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="verifyHeading">Verify Ownership</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span>&times;</span>
+                  </button>
                 </div>
-                <div>
-                  <input type="file" name="avatar" class="form-control border-0" accept=".png, .jpg, .jpeg" />
-                  <small class="form-text text-muted">Allowed file types: png, jpg, jpeg.</small>
+
+                <div class="modal-body" id="verifyForm">
+                  <div class="form-group">
+                    <label for="htmlTag" class="font-weight-semibold">HTML Tag</label>
+                    <textarea class="form-control" rows="3" id="htmlTag" readonly></textarea>
+                    <button type="button" class="btn btn-sm btn-outline-primary mt-2 float-right"
+                      id="copyHTMLTag">Copy</button>
+                  </div>
+
+                  <ul class="list-group list-group-flush mb-3">
+                    <li class="list-group-item">Step 1: Add the meta tag to the <code>&lt;head&gt;</code> section</li>
+                    <li class="list-group-item">Step 2: Click Verify</li>
+                  </ul>
+                </div>
+
+                <div class="modal-footer justify-content-center">
+                  <button type="button" id="websiteVerify" class="btn btn-primary">Verify</button>
                 </div>
               </div>
             </div>
-
-            <!-- Submit -->
-            <div class="text-end">
-              <button type="submit" class="btn btn-primary px-4"
-                style="background-color: #6777ef; border-color: #6777ef;">
-                Update Profile
-              </button>
-            </div>
-          </form>
-            </div>
-          </div>
           </div>
 
         </div>
-
       </div>
       <footer class="main-footer">
         <div class="footer-left">
