Profile Almost done

--- a/settings.html
+++ b/settings.html
@@ -290,8 +290,8 @@
                     <li><a href="./billing.html">Billing</a></li>
                   </ul>
                 </li>
-                <li><a class="nav-link" href="./settings.html">Settings</a></li>
-                <li class="active"><a class="nav-link" href="#">Logout</a></li>
+                <li class="active"><a class="nav-link" href="./settings.html">Settings</a></li>
+                <li><a class="nav-link" href="#">Logout</a></li>
               </ul>
             </li>
 
