--- a/index.html
+++ b/index.html
@@ -756,7 +756,9 @@
             <div class="col-12">
               <div class="card">
                 <div class="card-header">
-                  <i class="fas fa-link mr-2"></i>Link Generator
+                  <h4>
+                    Link Generator
+                  </h4>
                 </div>
                 <div class="card-body">
                   <form>
