--- a/coupons.html
+++ b/coupons.html
@@ -133,7 +133,7 @@
       <div class="main-sidebar sidebar-style-2" id="sidebar">
         <aside id="sidebar-wrapper">
           <div class="sidebar-brand">
-            <a href="index.html"> <img alt="image" src="assets/img/logo.png" class="header-logo" /> <span class="logo-name">Otika</span>
+            <a href="index.html"> <img alt="image" src="assets/img/logo.png" class="header-logo" /> <span class="logo-name">Affilo Tech</span>
             </a>
           </div>
           <ul class="sidebar-menu">
