--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <aside id="sidebar-wrapper">
           <div class="sidebar-brand">
             <a href="index.html"> <img alt="image" src="assets/img/logo.png" class="header-logo" /> <span
-                class="logo-name">Otika</span>
+                class="logo-name">Affilo Tech</span>
             </a>
           </div>
           <ul class="sidebar-menu">
